<resources>
    <string name="app_name">hpgame</string>
    <string name="login_button">Login</string>
    <string name="create_account_button">Create Account</string>
    <string name="game_name">sHaPe</string>
    <string name="level1">Level 1</string>
    <string name="level1_won">Congratulations on beating stage 1</string>
    <string name="level2_won">Congratulations! You have completed level 2! \n \nClick the button to \n go to level 3.</string>
    <string name="level3_won">Congratulations</string>
    <string name="enter_level2">Enter</string>
    <string name="enter_level3">Enter</string>
    <string name="level2">Level 2</string>
    <string name="level3">Level 3</string>
    <string name="username_error">Username already exists.\nPlease enter a different username.</string>
    <string name="login_error">Username or Password is incorrect. Please try again!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="username_hint">Enter a username</string>
    <string name="password_hint">Enter a password</string>
    <string name="confirm">Create</string>
    <string name="play_game">Start New Game</string>
    <string name="resume_game">Resume Game</string>
    <string name="player_stats">Player Stats</string>
    <string name="customize">Customize</string>
    <string name="profile_page_return">Return to Profile Page</string>
    <string name="play_again">Play Again</string>
    <string name="colour_scheme">Choose a colour scheme.</string>
    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>
    <string name="level_difficulty">Choose the game difficulty.</string>
    <string name="easy">Easy</string>
    <string name="hard">Hard</string>
    <string name="character">Choose a character.</string>
    <string name="circle">Circle</string>
    <string name="square">Square</string>
    <string name="button4">L</string>
    <string name="button5">Shoot</string>
    <string name="button6">R</string>
    <string name="scoreboard_username">Username</string>
    <string name="my_stats_title">My Best Records</string>
    <string name="display_button">Display</string>
    <string name="my_stats_button">My Stats</string>
    <string name="best_total_time">Best Total Time:</string>
    <string name="best_average_time">Best Average Time:</string>
    <string name="best_lives_percentage">Best Lives Percentage:</string>
    <string name="high_score">High Score:</string>
    <string name="return_to_scoreboard">Return To Scoreboard</string>
    <string name="return_to_profile_page">Return To Profile Page</string>
    <string name="record_unavailable">Play a game to set \na record.</string>
    <string name="title_score">Score</string>
    <string name="title_total_time">Total Time</string>
    <string name="title_avg_time">Average Time</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string-array name="scoreboardFilters">
        <item>Score</item>
        <item>Total Time</item>
        <item>Average Time</item>
    </string-array>
</resources>
