<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/myStatsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50sp"
        android:gravity="center"
        android:text="@string/my_stats_title"
        android:textSize="40sp" />

    <LinearLayout
        android:id="@+id/totalLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/bestTotal"
            android:layout_width="108sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="start"
            android:layout_marginStart="15dp"
            android:text="@string/best_total_time"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/bestTotalValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/averageLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/bestAverage"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/best_average_time"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/bestAverageValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/scoreLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/highScore"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/high_score"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/highScoreValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:text="" />
    </LinearLayout>

    <Button
        android:id="@+id/scoreboardReturnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:onClick="onClickScoreboardReturn"
        android:text="@string/return_to_scoreboard" />

    <Button
        android:id="@+id/profileReturnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:onClick="onClickProfileReturn"
        android:text="@string/return_to_profile_page" />

</LinearLayout>