<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutCreateUser"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/startUpBackground"
    tools:context="com.group0578.hpgame.view.CreateUserActivity">

    <EditText
        android:id="@+id/userNameCreate"
        android:layout_width="253dp"
        android:layout_height="63dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="156dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userPasswordCreate"
        android:layout_width="257dp"
        android:layout_height="67dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userNameCreate" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="219dp"
        android:layout_height="90dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="320dp"
        android:onClick="onClickConfirm"
        android:text="@string/confirm"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userPasswordCreate"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/errorMessageCreateUser"
        android:layout_width="338dp"
        android:layout_height="88dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/username_error"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm"
        app:layout_constraintVertical_bias="0.334" />
</androidx.constraintlayout.widget.ConstraintLayout>
