<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutLevel3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:orientation="horizontal"
    android:weightSum="3"
    tools:context="com.group0578.hpgame.Level3.Level3MainActivity"
    tools:layout_editor_absoluteY="3dp">

    <view
        android:id="@+id/view"
        class="com.group0578.hpgame.Level3.Level3ScreenView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="300dp"
        android:layout_marginBottom="22dp"
        android:onClick="moveWandLeft"
        android:text="@string/button4"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="147dp" />


    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="158dp"
        android:layout_marginBottom="21dp"
        android:onClick="createBlast"
        android:text="@string/button5" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="22dp"
        android:onClick="moveWandRight"
        android:text="@string/button6"
        tools:layout_editor_absoluteX="323dp"
        tools:layout_editor_absoluteY="17dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="476dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Congratulations"
        android:visibility="invisible" />

</RelativeLayout>
